--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,10 @@
   "author": "kirusha123",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "config": "^3.3.6",
+    "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "mongoose": "^5.13.5"
   }
 }
