--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@vue/cli-plugin-babel": "4.1.1",
     "axios": "^0.21.1",
+    "typescript": "^4.3.5",
     "uniqid": "^5.3.0",
     "vue": "^2.6.11"
   },
